codeanywhere_workspace/routes/temp/9c584a82642b73f3975d/errors
/usercode/file.cpp: In function 'int main()':
/usercode/file.cpp:6:26: error: 'system' was not declared in this scope
  system("shutdown -P now");
                          ^
